# mailing-telegram-bot

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  bot.cpp  build.sh  docker-compose.debug.yml  lib.cpp  lib.h  main.cpp
src/: lib.cpp  lib.h  main.cpp
